bug fix menu hover on mobile

--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -146,9 +146,9 @@ header {
 
 main {
 	background: $white;
-		section {
+	section {
 		padding: 12.2vmin 6%;
-		}
+	}
 }
 
 h1, h2 {
@@ -171,16 +171,16 @@ h1, h2 {
 }
 
 //Underlining menu items
-.underline {
+.underline { 
 	display: inline-block;
 	&::after {
+//		background-color: $darkgrey;
 		content: "";
 		display: block;
-		margin: 1px auto 0 0;
 		height: 1px;
-		width: 0;
-		background-color: $darkgrey;
-		transition: width .25s ease-in-out;
+		margin: 1px auto 0 0;	
+		transition: width .25s ease-in-out;	
+		width: 0;				
 	}
 	&:hover {
 		cursor: pointer;
@@ -189,6 +189,7 @@ h1, h2 {
 }
 
 .active.underline::after {
+	background: $orange;
 	width: 100%;
 }
 
