--- a/src/css/_top.scss
+++ b/src/css/_top.scss
@@ -14,7 +14,6 @@
 		}
 	}
 	nav {
-
 		ul {
 			display: inline-flex;
 			justify-content: center;
@@ -41,6 +40,5 @@
 	}
 	.underline {
 		&:hover {color: $orange;}
-		&::after {background: $orange;}
 	}
 }
