--- a/src/css/home.css
+++ b/src/css/home.css
@@ -126,17 +126,17 @@ h1, h2 {
   .underline::after {
     content: "";
     display: block;
-    margin: 1px auto 0 0;
     height: 1px;
-    width: 0;
-    background-color: #69696b;
-    transition: width .25s ease-in-out; }
+    margin: 1px auto 0 0;
+    transition: width .25s ease-in-out;
+    width: 0; }
   .underline:hover {
     cursor: pointer; }
   .underline:hover::after {
     width: 100%; }
 
 .active.underline::after {
+  background: #fcb117;
   width: 100%; }
 
 .hidden {
@@ -371,8 +371,6 @@ h1, h2 {
       flex-basis: 100%; } }
   .top .underline:hover {
     color: #fcb117; }
-  .top .underline::after {
-    background: #fcb117; }
 
 .content {
   text-align: center; }
